// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api headers should create headers for Helix 1`] = `
Array [
  Array [
    "https://api.twitch.tv/helix/",
    Object {
      "headers": Object {
        "Authorization": "Bearer TOKEN",
        "Client-ID": "CLIENT_ID",
      },
    },
  ],
]
`;

exports[`Api headers should create headers with clientId 1`] = `
Array [
  Array [
    "https://api.twitch.tv/kraken/",
    Object {
      "headers": Object {
        "Accept": "application/vnd.twitchtv.v5+json",
        "Client-ID": "CLIENT_ID",
      },
    },
  ],
]
`;

exports[`Api headers should create headers with clientId and token 1`] = `
Array [
  Array [
    "https://api.twitch.tv/kraken/",
    Object {
      "headers": Object {
        "Accept": "application/vnd.twitchtv.v5+json",
        "Authorization": "OAuth TOKEN",
        "Client-ID": "CLIENT_ID",
      },
    },
  ],
]
`;

exports[`Api headers should create headers with token 1`] = `
Array [
  Array [
    "https://api.twitch.tv/kraken/",
    Object {
      "headers": Object {
        "Accept": "application/vnd.twitchtv.v5+json",
        "Authorization": "OAuth TOKEN",
      },
    },
  ],
]
`;

exports[`Api initialize should resolve if already initialized 1`] = `undefined`;

exports[`Api initialize should set readyState and status 1`] = `
Object {
  "token": Object {
    "authorization": Object {
      "createdAt": "2016-12-14T15:51:16Z",
      "scopes": Array [
        "user_read",
      ],
      "updatedAt": "2016-12-14T15:51:16Z",
    },
    "clientId": "uo6dggojyb8d6soh92zknwmi5ej1q2",
    "userId": "44322889",
    "userName": "dallas",
    "valid": true,
  },
}
`;

exports[`Api methods should throw on failure 1`] = `[Error: undefined undefined [TwitchJS]]`;

exports[`Api versions should call the Helix endpoint 1`] = `
Object {
  "a": Object {
    "b": "c ",
  },
  "headers": Object {
    "Authorization": "Bearer TOKEN",
    "Client-ID": "CLIENT_ID",
  },
}
`;
